--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,8 +9,7 @@
 	<div class="container">
 		<div class="navbar">
 			<div class="navbar-inner">
-				<a class="brand" href="http://www.thymeleaf.org"> Thymeleaf -
-					Plain </a>
+				<a class="brand" href="http://milkyway.io"> Milkyway.io </a>
 				<ul class="nav">
 					<li><a th:href="@{/}" href="home.html"> Home </a></li>
 				</ul>
@@ -25,8 +24,7 @@
 					<input type="text" name="username" value="" placeholder="Username" />
 					<input type="password" name="password" placeholder="Password" />
 				</fieldset>
-				<input type="submit" id="login" value="Login"
-					class="btn btn-primary" />
+				<input type="submit" id="login" value="Enter" class="btn btn-primary" />
 			</form>
 		</div>
 	</div>
